[gd_scene load_steps=2 format=3 uid="uid://cyy71o1kbo5dv"]

[ext_resource type="Script" uid="uid://boxt3fon01l1" path="res://menus/ControlsOverlay/controls_ui.gd" id="1_5801k"]

[node name="ControlsUI" type="CanvasLayer"]
script = ExtResource("1_5801k")
spritepos = Vector2(100, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -77.0
offset_right = 40.0
grow_vertical = 0

[node name="MoveLeftLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/MoveLeftLabel"]
region_rect = Rect2(0, 0, 16, 16)

[node name="MoveRightLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/MoveRightLabel"]
region_rect = Rect2(0, 0, 16, 16)

[node name="JumpLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/JumpLabel"]

[node name="DashLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/DashLabel"]

[node name="YankLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/YankLabel"]
